# tw-lint

./: Cargo.toml  README.md  flake.nix
docs/: lsp-findings.md
docs/superpowers/plans/: 2026-07-10-tw-lint.md
docs/superpowers/specs/: 2026-07-10-tw-lint-design.md
src/: cli.rs  edits.rs  groups.rs  join.rs  lib.rs  main.rs  report.rs  session.rs  settings.rs
src/lsp/: client.rs  transport.rs
tests/: e2e_check.rs  e2e_diagnostics.rs  e2e_fix.rs
tests/fixtures/project/src/: sample.rs
