[package]
name = "tw-lint"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
lsp-types = "0.95"
lsp-server = "0.7"
glob = "0.3"
regex = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
